--- a/JavaScript30-master/02 - JS and CSS Clock/index-START.html
+++ b/JavaScript30-master/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,35 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%; /* changing the pivot point from the middle (default) to the right side*/
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); /* gives it a little pullback so it 'ticks' */
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    function setDate(){
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
+      minuteHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      const hour = now.getHours();
+      const hourDegree = ((hour/12) * 360) + ((mins/60)*30) + 90;
+      hourHand.style.transform = `rotate(${hourDegree}deg`;
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
