--- a/JavaScript30-master/06 - Type Ahead/index-START.html
+++ b/JavaScript30-master/06 - Type Ahead/index-START.html
@@ -15,7 +15,64 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+  //create an array to hold the cities
+  const cities = [];
+
+  //get all the cities, convert to json and push into cities array
+  fetch(endpoint)
+    .then(blob => blob.json())
+    .then(data => cities.push(...data)); //spread the array into cities
+
+  //arguments: word you want to match with cities and the cities array
+  function findMatches(wordToMatch, cities) {
+    return cities.filter(place => {
+      //figure out if the city or state matches what was searched
+
+      //g = global, i = case insensitive
+      const regex = new RegExp(wordToMatch, 'gi');
+
+      //if matches city OR state
+      return place.city.match(regex) || place.state.match(regex);
+    })
+  }
+
+  function numberWithCommas(x) {
+    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+  }
+
+
+  function displayMatches(){
+    const matchArray = findMatches(this.value, cities);
+
+    const html = matchArray.map(place => {
+      const regex = new RegExp(this.value, 'gi');
+
+      //replace the place.city/state the regex
+      const cityName = place.city.replace(regex, `<span class="hl"> ${this.value}</span>`);
+      const stateName = place.state.replace(regex, `<span class="hl"> ${this.value}</span>`);
+      return `
+        <li>
+          <span class="name"> ${cityName}, ${stateName} </span>
+          <span class="population"> ${numberWithCommas(place.population)} </span>
+        </li>
+      `;
+      
+
+    }).join(''); //turn an array with multiple items into a string
+    suggestions.innerHTML = html;
+  }
+
+  const searchInput = document.querySelector('.search');
+  const suggestions = document.querySelector('.suggestions');
+
+  //change only works after you click outside of the box
+  searchInput.addEventListener('change', displayMatches);
+  searchInput.addEventListener('keyup', displayMatches);
+  
+
+
 
 </script>
 </body>
