--- a/JavaScript30-master/14 - JavaScript References VS Copying/index-START.html
+++ b/JavaScript30-master/14 - JavaScript References VS Copying/index-START.html
@@ -8,15 +8,25 @@
 
   <script>
     // start with strings, numbers and booleans
+    let age = 100;
+    let age2 = age;
+    console.log(age, age2);
+    age = 200;
+    //console.log(age, age2);
+
 
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const team = players;
 
     // You might think we can just do something like this:
+    team[3] = 'lux'; //team is just the reference
+    //poppy = lux now
 
     // however what happens when we update that array?
+
 
     // now here is the problem!
 
@@ -25,12 +35,18 @@
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
-
+      const team2 = players.slice();
+    
     // one way
 
     // or create a new array and concat the old one in
+    const team3 = [].concat(players);
 
     // or use the new ES6 Spread
+    const team4 = [...players]; //take every item out and put it in here
+    team4[3] = 'yo';
+
+    const team5 = Array.from(players);
 
     // now when we update it, the original one isn't changed
 
@@ -43,12 +59,31 @@
     };
 
     // and think we make a copy:
+    const captain = person; //just a reference
 
     // how do we take a copy instead?
+    const cap2 = Objecct.assign({}, person, {number: 99});
 
     // We will hopefully soon see the object ...spread
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+
+    const wes = {
+      name: 'wes',
+      age: 100,
+
+      social: {
+        twitter: '@wesbos',
+        facebook: 'wesbos.developer'
+      }
+    };
+
+    const dev = Object.assign({}, wes);
+
+    dev.social.twitter = '@coolman'; //going to update wes also!!
+    //object assign only does 1 level 
+
+    const dev2 = JSON.parse(JSON.stringify(wes)); //poor man deep clone
 
   </script>
 
