--- a/JavaScript30-master/15 - LocalStorage/index-START.html
+++ b/JavaScript30-master/15 - LocalStorage/index-START.html
@@ -28,7 +28,49 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  //look at local storage else load an empty array
+  const items = JSON.parse(localStorage.getItem('items')) || [];
+
+  function addItem(e){
+    e.preventDefault(); //stop the page from auto reloading
+    const text = (this.querySelector('[name=item]')).value; 
+    const item = {
+      text, //text = text
+      done: false
+    }
+    items.push(item);
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+    this.reset() //form element has a reset function
+  }
+
+  //plates has a default value
+  function populateList(plates = [], platesList){
+    platesList.innerHTML = plates.map((plate, i) => {
+      return `
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+          <label for="item${i}">${plate.text}</label>
+        </li>
+      `;
+    }).join(''); //take array, turn into 1 big string
+  }
+
+  function toggleDone(e){
+    if(!e.target.matches('input')) return; //skip this unless its an input
+    const el = e.target;
+    const index = el.dataset.index;
+
+    items[index].done = !items[index].done; //opposite
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
+
+  //On page load, load items onto list if there are any
+  populateList(items, itemsList);
 
 </script>
 
